--- a/app/src/main/res/layout/informacion.xml
+++ b/app/src/main/res/layout/informacion.xml
@@ -9,7 +9,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="0.05" >
 
-        <TableRow
+       <!-- <TableRow
             android:id="@+id/editarButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" android:layout_marginTop="6dp">
@@ -32,7 +32,7 @@
                 </LinearLayout>
             </LinearLayout>
 
-        </TableRow>
+        </TableRow> -->
 
 
         <TableRow
