--- a/app/src/main/res/layout/ingreso_direccion.xml
+++ b/app/src/main/res/layout/ingreso_direccion.xml
@@ -43,85 +43,85 @@
 
         </TableRow>
 
-        <TableRow
-            android:id="@+id/campoCiudad"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_marginTop="15dp" >
+        <!--   <TableRow
+                 android:id="@+id/campoCiudad"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content" android:layout_marginTop="15dp" >
 
-            <LinearLayout
-                android:layout_height="100dp"
-                android:layout_weight="3"
-                android:background="@drawable/box_free_simple"
-                android:orientation="vertical" >
+                 <LinearLayout
+                     android:layout_height="100dp"
+                     android:layout_weight="3"
+                     android:background="@drawable/box_free_simple"
+                     android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/text_ciudad"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ciudad" />
+                     <TextView
+                         android:id="@+id/text_ciudad"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="@string/ciudad" />
 
-                <EditText
-                    android:id="@+id/textCiudad"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/ciudad"
-                    android:textColor="@color/color_black"
-                    android:ems="10" />
+                     <EditText
+                         android:id="@+id/textCiudad"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:hint="@string/ciudad"
+                         android:textColor="@color/color_black"
+                         android:ems="10" />
 
-            </LinearLayout>
+                 </LinearLayout>
 
-        </TableRow>
+             </TableRow>
 
-        <TableRow
-            android:id="@+id/tableRow3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" android:layout_marginTop="15dp" >
+             <TableRow
+                 android:id="@+id/tableRow3"
+                 android:layout_width="wrap_content"
+                 android:layout_height="wrap_content" android:layout_marginTop="15dp" >
 
-            <LinearLayout
-                android:layout_height="100dp"
-                android:layout_weight="3"
-                android:background="@drawable/box_free_simple"
-                android:orientation="vertical" >
+                 <LinearLayout
+                     android:layout_height="100dp"
+                     android:layout_weight="3"
+                     android:background="@drawable/box_free_simple"
+                     android:orientation="vertical" >
 
-                <TextView
-                    android:id="@+id/text_provincia"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/provincia" />
+                     <TextView
+                         android:id="@+id/text_provincia"
+                         android:layout_width="wrap_content"
+                         android:layout_height="wrap_content"
+                         android:text="@string/provincia" />
 
-                <EditText
-                    android:id="@+id/textProvincia"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="@string/provincia"
-                    android:ems="10"
-                    android:textColor="@color/color_black"/>
+                     <EditText
+                         android:id="@+id/textProvincia"
+                         android:layout_width="match_parent"
+                         android:layout_height="wrap_content"
+                         android:hint="@string/provincia"
+                         android:ems="10"
+                         android:textColor="@color/color_black"/>
 
-            </LinearLayout>
+                 </LinearLayout>
 
-        </TableRow>
+             </TableRow>-->
 
-    </TableLayout>
+         </TableLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="horizontal" >
+         <LinearLayout
+             android:layout_width="match_parent"
+             android:layout_height="match_parent"
+             android:orientation="horizontal" >
 
-        <Button
-            android:id="@+id/aceptarButtom"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_weight="0.40"
-            android:text="@string/aceptar"
-            android:onClick="showLocation" />
+             <Button
+                 android:id="@+id/aceptarButtom"
+                 android:layout_width="wrap_content"
+                 android:layout_height="70dp"
+                 android:layout_weight="0.40"
+                 android:text="@string/aceptar"
+                 android:onClick="showLocation" />
 
-        <Button
-            android:id="@+id/cancelarButtom"
-            android:layout_width="wrap_content"
-            android:layout_height="70dp"
-            android:layout_weight="0.40"
-            android:text="@string/cancelar" />
+             <Button
+                 android:id="@+id/cancelarButtom"
+                 android:layout_width="wrap_content"
+                 android:layout_height="70dp"
+                 android:layout_weight="0.40"
+                 android:text="@string/cancelar" />
 
-    </LinearLayout>
-</LinearLayout>
+         </LinearLayout>
+     </LinearLayout>
